Update to 1.0.1